<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/app_margin"
    android:gravity="center"
    tools:context="com.prekshashukla.firebaseapp.activities.MainActivity">

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main_username"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="@dimen/small_margin"
        android:layout_marginBottom="@dimen/app_margin"/>

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="@dimen/small_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main_login"
        android:text="@string/signin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main_register"
        android:text="@string/login_register"
        android:layout_marginTop="@dimen/app_margin"
        android:padding="@dimen/small_margin"
        android:gravity="center"/>

</LinearLayout>
