<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feed"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_profile"
        android:id="@+id/activity_feed_view_profile_button"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_feed_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem= "@layout/item_feed"/>
</LinearLayout>